# AI-Powered-Finite-Automata-Editor-Simulator

./: .gitignore  README.md  main.py  pyproject.toml
backend/: ai.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/editor/: page.tsx
frontend/components/: Footer.tsx  Header.tsx  automata-examples.tsx  automata-graph.tsx  automata-input.tsx  automata-simulator.tsx  automata-visualizer.tsx
frontend/lib/: automata-examples.ts  automata-simulator.ts  automata-types.ts
